OPIK-1238: Improve create individual span performance